# pypublish

./: .gitignore  README.md  pyproject.toml
src/pypublish/: __init__.py  __main__.py
